--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Welcome to Osiri University Virtual Assistant</h1>
-  <p>Chat with our virtual assistant to learn more about Osiri University, including programs, admissions, and much more!</p>
+  <p>Chat with our virtual assistant to learn more about Osiri University, including programs, admissions, and more.</p>
 
   <!-- Dialogflow Messenger Script -->
   <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
